--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <!-- Your code here -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="text./css">
+
+    <title>Cat Perry's Favourite Cats</title>
+
+    
+</head>
+<body>
+    
+</body>
+</html>
