--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="text./css">
+    <link rel="stylesheet" href="style.css">
 
     <title>Cat Perry's Favourite Cats</title>
 
